--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My flow</title>
+    <title>My Flow</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
@@ -14,11 +14,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+
+    <link rel="shortcut icon" type="image/png" href="icon.png" />
   </head>
   <body>
     <div class="container">
       <div class="messages">
-   
       <div class="input-div">
         <input id="input" type="text" placeholder="Napisz coś tutaj..." />
         <i class="material-icons" id="submit">send</i>
